--- a/requirements.txt
+++ b/requirements.txt
@@ -63,9 +63,13 @@ zlib=1.2.13=h18a0788_1
 zstd=1.5.6=hfb09047_0
 
 pandas~=2.2.3
-numpy~=2.2.2
+numpy~=1.26.4
 matplotlib~=3.10.0
 seaborn~=0.13.2
 optuna~=4.2.0
 scikit-learn~=1.6.1
 skrebate~=0.62
+
+catboost~=1.2.7
+lightgbm~=4.5.0
+xgboost~=2.1.3
